girl who fell beneath the sea background color

--- a/main-reviews/9-girl.html
+++ b/main-reviews/9-girl.html
@@ -59,23 +59,23 @@
                             </section>
 
                             <section class="update">
-								<h2> Update: 13%</h2>
-                            	<p>Loving this so far!</p>
+								<h2 class="girl"> Update: 13%</h2>
+                            	<p class="girl">Loving this so far!</p>
 
-                            	<p>The dragon and spirit realm reminds me a lot of Spirited Away.</p>
+                            	<p class="girl">The dragon and spirit realm reminds me a lot of Spirited Away.</p>
 
-                            	<p>Very curious about how the red string of fate ties into everything going forward.</p>
+                            	<p class="girl">Very curious about how the red string of fate ties into everything going forward.</p>
 
-                            	<p>Also I’m surprisingly not as bothered by the first person narration as I expected. Could be the audiobook though.</p>
+                            	<p class="girl">Also I’m surprisingly not as bothered by the first person narration as I expected. Could be the audiobook though.</p>
                             </section>
 
                             <section class="update">
-                            	<h2>Update: 80%</h2>
-                            	<p>I have no idea where they’re going with this now.</p>
+                            	<h2 class="girl">Update: 80%</h2>
+                            	<p class="girl">I have no idea where they’re going with this now.</p>
                             </section>
 
                             <section class="review">
-                            	<h2>Review</h2>
+                            	<h2 class="girl">Review</h2>
                             	<!--Write and insert review here!!!-->
                             
                             </section>
