together we rot background color

--- a/main-reviews/10-rot.html
+++ b/main-reviews/10-rot.html
@@ -59,21 +59,21 @@
                             </section>
 
                             <section class="update">
-								<h2>Update: 19%</h2>
-                            	<p>The audiobook has two narrators and the woman voicing Wil is such a fantastic actor! She has so much emotion and sass. I love it!</p>
+								<h2 class="rot">Update: 19%</h2>
+                            	<p class="rot">The audiobook has two narrators and the woman voicing Wil is such a fantastic actor! She has so much emotion and sass. I love it!</p>
 
-                           		 <p>Also Arndt has managed to sell me on the romance within a chapter. Most stories with a secondary romance still leave me feeling shaky after a whole novel.</p>
+                           		 <p class="rot">Also Arndt has managed to sell me on the romance within a chapter. Most stories with a secondary romance still leave me feeling shaky after a whole novel.</p>
                                 
-                            	<p>And I’ve finally found some high school characters with complexity! I knew this was gonna be a good one and I am not disappointed </p>
+                            	<p class="rot">And I’ve finally found some high school characters with complexity! I knew this was gonna be a good one and I am not disappointed </p>
                             </section>
 
                             <section class="update">
-                            	<h2>Update: 55%</h2>
-                            	<p>Half-way through and I’m still super excited and invested in this book! Too many of my recent reads have not lived up to the hype or dropped off in the middle, leaving me feeling confused, wishing parts had been cut, or questioning where the book was going (and not in a fun way). This book has none of those issues & I expect this to be a new favorite.</p>
+                            	<h2 class="rot">Update: 55%</h2>
+                            	<p class="rot">Half-way through and I’m still super excited and invested in this book! Too many of my recent reads have not lived up to the hype or dropped off in the middle, leaving me feeling confused, wishing parts had been cut, or questioning where the book was going (and not in a fun way). This book has none of those issues & I expect this to be a new favorite.</p>
                             </section>
 
                             <section class="review">
-                           		<h2>Review</h2>
+                           		<h2 class="rot">Review</h2>
                            		<!--Write and insert review here!!!-->
                             
                             </section>
