--- a/main-reviews/11-hide.html
+++ b/main-reviews/11-hide.html
@@ -59,12 +59,12 @@
                             </section>
 
                             <section class="update">
-								<h2>Update: 80%</h2>
-                            	<p>I should’ve remembered the Squid Game comparisons. But at least this book looks like it will provide actual answers and some measure of resolution. </p>
+								<h2 class="hide">Update: 80%</h2>
+                            	<p class="hide">I should’ve remembered the Squid Game comparisons. But at least this book looks like it will provide actual answers and some measure of resolution. </p>
                             </section>
 
                             <section class="review">
-                            	<h2>Review</h2>
+                            	<h2 class="hide">Review</h2>
                             	<!--Write and insert review here!!!-->
                             
                             </section>
