artificial condition background color

--- a/archive-reviews/artificial.html
+++ b/archive-reviews/artificial.html
@@ -59,11 +59,10 @@
                             </section>
 
                             <section class="review">
-                                <h2>Review</h2>
-                                    <p>The adventures of Murderbot continues with more reckless humans trying to get themselves plus the addition of another media-obsessed construct in the form of ship AI ART (Asshole Research Transport) who is the smartest being in the room and will bully you into friendship and making better choices. This was a fun side quest for Murderbot, but not quite as enjoyable as the first. We see a lot more development in terms of the various constructs that exist as well as their relationships to the humans they work for, their purpose, and their freedom/autonomy. However, I thought this novella was going to focus more on Murderbot’s murderous backstory. While their investigation is the entire reason they get involved, it’s only a small blip in the overall storyline. We get a play-by-play analysis of what happened through the recovered data, but I expected more given this incident is Murderbot’s origin and the root of all their anxieties.</p>
+                                <h2 class="artificial">Review</h2>
+                                    <p class="artificial">The adventures of Murderbot continues with more reckless humans trying to get themselves plus the addition of another media-obsessed construct in the form of ship AI ART (Asshole Research Transport) who is the smartest being in the room and will bully you into friendship and making better choices. This was a fun side quest for Murderbot, but not quite as enjoyable as the first. We see a lot more development in terms of the various constructs that exist as well as their relationships to the humans they work for, their purpose, and their freedom/autonomy. However, I thought this novella was going to focus more on Murderbot’s murderous backstory. While their investigation is the entire reason they get involved, it’s only a small blip in the overall storyline. We get a play-by-play analysis of what happened through the recovered data, but I expected more given this incident is Murderbot’s origin and the root of all their anxieties.</p>
 
-                                    <p>It’s not what I was hoping for, but I’m still excited for the next 
-                                    installment.</p>
+                                    <p class="artificial">It’s not what I was hoping for, but I’m still excited for the next installment.</p>
                             </section>
 							
 							<details class="trigger warning">
