legendary background color

--- a/archive-reviews/legendary.html
+++ b/archive-reviews/legendary.html
@@ -61,10 +61,10 @@
                             </section>
 
                             <section class="review">
-                                <h2>Review</h2>
-                                    <p>The sequel is better! Legendary holds all the magic of the first book while further fleshing out the world, the plot, and the game. I love the addition of the Fates and Paloma’s Deck of Destiny, which really added to the lore and created a new level of myth and magic to the world. Tella also gets so much more development! More than just the reckless little sister that Scarlett has to always look out for, Tella’s got plans and schemes. She knows what she wants and she never feels like a passive character or someone that stuff just happens too, like Scarlett did. Also, Caraval felt like an actual game this time with legitimate clues & progress instead of endless reveals that make characters question their reality. The endless ruminations on Legend’s identity got a bit annoying because you get multiple hints & near confirmations before the “official” reveal, though. </p>
+                                <h2 class="legendary">Review</h2>
+                                    <p class="legendary">The sequel is better! Legendary holds all the magic of the first book while further fleshing out the world, the plot, and the game. I love the addition of the Fates and Paloma’s Deck of Destiny, which really added to the lore and created a new level of myth and magic to the world. Tella also gets so much more development! More than just the reckless little sister that Scarlett has to always look out for, Tella’s got plans and schemes. She knows what she wants and she never feels like a passive character or someone that stuff just happens too, like Scarlett did. Also, Caraval felt like an actual game this time with legitimate clues & progress instead of endless reveals that make characters question their reality. The endless ruminations on Legend’s identity got a bit annoying because you get multiple hints & near confirmations before the “official” reveal, though. </p>
 
-                                    <p>I’m super excited to finally finish the series and see how all the new twists/changes to the world turn out in the last book. And hopefully get to see a mix of both Scarlett & Tella’s stories.</p>
+                                    <p class="legendary">I’m super excited to finally finish the series and see how all the new twists/changes to the world turn out in the last book. And hopefully get to see a mix of both Scarlett & Tella’s stories.</p>
                             </section>
 
 							<details class="trigger warning">
