hallowe'en party review
review written & added

--- a/main-reviews/12-hallowe'en.html
+++ b/main-reviews/12-hallowe'en.html
@@ -60,7 +60,7 @@
 
                             <section class="review">
                                 <h2 class="halloween">Review</h2>
-                                <!--Write and insert review here!!!-->
+                                <p class="halloween">I was really looking forward to this novel! I love Agatha Christie and I was super excited ahead of the A Haunting in Venice release. But this one was just disappointing. Maybe I’ve been reading too many horror thrillers lately, but nothing seemed to happen in this book after Poirot was called in, with the exception of the second murder. Most of the investigation was just him asking around about other crimes that had been committed in the past. There were three that I can recall: Olga’s disappearance and the forged will of Mrs. Llewellyn-Smythe, the gang knife attack of Lesley Ferrier, and the murder of a young school teacher. There were so many moving pieces and suspicious parties that I had trouble keeping track – or interest. So, of course, they all connect back to Joyce’s murder in a very intricate and convoluted fashion. The reveal of the guilty party and the attempted sacrificial ritual of Miranda all caught my attention at the end, but for the rest of the story I struggled to understand or care.</p>
                             
                             </section>
 
