the sacrifice background-color

--- a/archive-reviews/sacrifice.html
+++ b/archive-reviews/sacrifice.html
@@ -59,7 +59,7 @@
                             </section>
 
                             <section class="review">
-                                <h2>Review</h2>
+                                <h2 class="sacrifice">Review</h2>
                                 <!--Write and insert review here!!!-->
                             
                             </section>
