--- a/archive-reviews/sadie.html
+++ b/archive-reviews/sadie.html
@@ -67,7 +67,7 @@
                                     <p class="sadie">I was not prepared for the monster Keith/Darren/Jack was. (Seriously check the content warnings. I was caught off guard and even more unsettled because of it). So much of Sadie’s journey involves the effects and reactions to his abuse, which is never fully described on the page. Instead we get disturbing flashback scenes of creepy behavior, the emotional turmoil of the evidence he and Silas kept, as well as testimonies from a host of characters who thought they were great guys. All of that makes this so much more real because “girls go missing all the time” but rarely are we forced into the true aftermath of these stories.</p>
                                     
                                     <details class="sadie">
-                                        <summary>Vague Spoilers</summary>
+                                        <summary>Spoilers for the Ending</summary>
                                             <p>There was no other way to end this book. Apparently the ending is contentious, and I get that because usually such an open-ending feels unfinished and unsatisfying, but it would have hurt the story to do things differently.</p>
                                     </details>
                             </section>
