--- a/archive-reviews/sadie.html
+++ b/archive-reviews/sadie.html
@@ -70,6 +70,8 @@
                                         <summary>Spoilers for the Ending</summary>
                                             <p>There was no other way to end this book. Apparently the ending is contentious, and I get that because usually such an open-ending feels unfinished and unsatisfying, but it would have hurt the story to do things differently.</p>
                                     </details>
+
+									<p class="sadie">A quick note on the audio production: This is one of the best audiobooks that I have listened to! There are multiple narrators for the alternating POV chapters, and a lot of Wes' chapters start out like a true crime podcast. If you are at all interested in audiobooks, this one is a great example!</p>
                             </section>
 							
 							<details class="trigger warning">
