--- a/main-reviews/9-girl.html
+++ b/main-reviews/9-girl.html
@@ -83,7 +83,7 @@
 									<p class="girl">Despite all the very confusing middle bits, I did also really enjoy the ending sequences.</p> 
 										<details class="girl">
 											<summary>Spoilers</summary>
-All the weird stuff between Shin and the Sea God can be attributed to Shin giving up his memories and soul to false-Sea God. He is the famous emperor whose death led to the nation’s collapse while Shin is the true Sea God. However, rather than jumping into their perfect fairytale ending, Mina returns back to her village and family. After all, their protection has been her motivation this entire time. Mina is given a year to spend in the mortal world before Shin will come to find her. However, it takes another full year for this to happen because the spell to send Mina back also erased Shin’s memories of her. Both Mina and Shin are given time to adjust to their new lives before jumping into their relationship. 
+<p>All the weird stuff between Shin and the Sea God can be attributed to Shin giving up his memories and soul to false-Sea God. He is the famous emperor whose death led to the nation’s collapse while Shin is the true Sea God. However, rather than jumping into their perfect fairytale ending, Mina returns back to her village and family. After all, their protection has been her motivation this entire time. Mina is given a year to spend in the mortal world before Shin will come to find her. However, it takes another full year for this to happen because the spell to send Mina back also erased Shin’s memories of her. Both Mina and Shin are given time to adjust to their new lives before jumping into their relationship. 
 										</details>
 <p class="girl">I found it a really refreshing conclusion.</p>
                             
