sacrifice.html link
Added link to the Sacrifice

--- a/Archive.html
+++ b/Archive.html
@@ -74,8 +74,8 @@
 								<li><a href="main-reviews/10-rot.html">Together We Rot</a></li>
 								<li><a href="main-reviews/11-hide.html">Hide</a></li>
 								<li><a href="main-reviews/12-hallowe'en.html">Hallowe'en Party</a></li>
+								<li><a href="archive-reviews/sacrifice.html">The Sacrifice</li>
 								<!--Hidden until it is finished
-								<li>The Sacrifice</li>
 								<li>Assistant to the Villain</li>-->
 							</ul>
 						</div>
