sadie.html snippet
Sadie quote snippet

--- a/archive-reviews/sadie.html
+++ b/archive-reviews/sadie.html
@@ -58,6 +58,11 @@
 							    <p> Crime, Mystery/Thriller, Contemporary </p>
                             </section>
 
+							<section class="snippet-2">
+								<p>“Girls go missing all the time. And ignorance is bliss. I didn’t want this story because I was afraid. I was afraid of what I wouldn’t find and I was afraid of what I would. I still am.” – Courtney Summer, <em>Sadie</em></p>
+							</section>
+									
+
                             <section class="review">
                                 <h2 class="sadie">Review</h2>
                                     <p class="sadie">I’m not quite sure how to begin with this book. It’s powerful and heavy and so vastly different from what I thought it was going to be. And I know this is going to sit with me for a long time.</p>
