--- a/Archive.html
+++ b/Archive.html
@@ -69,7 +69,8 @@
 								<li><a href="main-reviews/10-rot.html">Together We Rot</a></li>
 								<li><a href="main-reviews/11-hide.html">Hide</a></li>
 								<li><a href="main-reviews/12-hallowe'en.html">Hallowe'en Party</a></li>
-								<li><a href="archive-reviews/sacrifice.html">The Sacrifice</li>
+								<!--Did not get to the review for this one. May come back to it if I continue to use the site.
+									<li><a href="archive-reviews/sacrifice.html">The Sacrifice</li>-->
 								<!--Hidden until I finish reading. Might not get done before the assignment is due.
 								<li>Assistant to the Villain</li>-->
 							</ul>
