1-inheritance.html edit background color
Figured out my weird background color problem!!!

--- a/main-reviews/1-inheritance.html
+++ b/main-reviews/1-inheritance.html
@@ -87,7 +87,7 @@
                             	<p class="inheritance">The only saving grace comes from the clues at the end telling us that Tobias Hawthorne was much more involved in Avery’s life than previously thought and the explanation for the will is more complex than a birthdate & anagram name. That, plus the Xander involvement is the only reason I plan to continue this series because that sounds much more interesting a mystery than what I got here.</p>
 							</section>
                                     
-                           <section>
+                           <section class="edit">
 							<h2 class="inheritance">Edit:</h2>
                             <p class="inheritance">It’s been about a month and after letting this book stew, reading some book two reviews, and ranting for an hour to a friend, I’ve come to two conclusions: my anger at the Emily plot line overshadows any of the good or okay parts and I will not be reading the sequel. I have no interest in love triangles, especially involving siblings or hypocrites. (I’m looking at you Grayson. “My family is the most important thing to me and I won’t let another girl come between us.” Yeah right.) Not to mention none of the 15 or so reviews I read mentioned Xander, so he’s clearly not a big part of the second bok. (And why is that? Xander was by far my favorite character!) Plus most of the clues were rather simple (filling in the idioms), had no answer (the random book in the library), or required being physically present and thus no real brain power (the number code and sundial puzzle). Not to mention the Emily of it all.</p>
 						   </section>
