--- a/main-reviews/1-inheritance.html
+++ b/main-reviews/1-inheritance.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Inheritance Games by Jennifer Lynn Barnes</h1>
-							<span class="image main"><img src="../images/inheritance.jpg" alt="" /></span>
+							<span class="image main"><img src="../images/inheritance-small.jpg" alt="" /></span>
 							
 							<section class="basics">
 								<p>May 3, 2023 - May 8, 2023</p>
