trigger warning classification
added classifications to the trigger warnings so the CSS white color would format correctly

--- a/archive-reviews/artificial.html
+++ b/archive-reviews/artificial.html
@@ -66,7 +66,7 @@
                             </section>
 							
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>death, violence, gun violence, medical content, blood, murder</p>
                             </details>
 						</div>
