--- a/archive-reviews/caraval.html
+++ b/archive-reviews/caraval.html
@@ -94,7 +94,7 @@
                             </section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>death, blood, murder, child abuse, physical abuse, child abuse</p>
                             </details>
 						</div>
