--- a/archive-reviews/legendary.html
+++ b/archive-reviews/legendary.html
@@ -68,7 +68,7 @@
                             </section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>blood, vilence, death, murder, abandonment</p>
                             </details>
 						</div>
