--- a/archive-reviews/sacrifice.html
+++ b/archive-reviews/sacrifice.html
@@ -65,7 +65,7 @@
                             </section>
 
                             <details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>death, gore, body horror, violence, colonialism, racism, sexual assault/harassment, domestic abuse</p>
                             </details>
 						</div>
