--- a/archive-reviews/sadie.html
+++ b/archive-reviews/sadie.html
@@ -80,7 +80,7 @@
                             </section>
 							
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>pedophilia, child abuse, sexual assault, drub abuse, murder, addiction</p>
                             </details>
 						</div>
