--- a/main-reviews/1-inheritance.html
+++ b/main-reviews/1-inheritance.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Inheritance Games by Jennifer Lynn Barnes</h1>
-							<span class="image main"><img src="../images/inheritance-small.jpg" alt="" /></span>
+							<span class="image main"><img src="../images/inheritance-medium.jpg" alt="" /></span>
 							
 							<section class="basics">
 								<p>May 3, 2023 - May 8, 2023</p>
@@ -93,7 +93,7 @@
 						   </section>
 
 						   <details class="trigger warning">
-							<summary>Trigger Warnings</summary>
+							<summary class="trigger warning">Trigger Warnings</summary>
 							<p>Mentions or depictions of:<br>death, domestic abuse, toxic relationship, gun violence</p>
 						</details>
 						</div>
