--- a/main-reviews/12-hallowe'en.html
+++ b/main-reviews/12-hallowe'en.html
@@ -65,7 +65,7 @@
                             </section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>child death, murder, death, xenophobia, suicide</p>
                             </details>
 						</div>
