--- a/main-reviews/2-cemetery.html
+++ b/main-reviews/2-cemetery.html
@@ -70,7 +70,7 @@
 							</section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>transphobia, blood, death, deadnaming, violence</p>
                             </details>
 						</div>
