--- a/main-reviews/4-rwrb.html
+++ b/main-reviews/4-rwrb.html
@@ -69,7 +69,7 @@
 							</section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>forced outing, homophobia, sexual content, sexual assault, drug abuse, racism</p>
                             </details>
 						</div>
