--- a/main-reviews/6-sunbearer.html
+++ b/main-reviews/6-sunbearer.html
@@ -74,7 +74,7 @@
 							</section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>violence, bullying, blood, dysphoria, child abuse, child death, death, fire/burns</p>
                             </details>
 						</div>
