--- a/main-reviews/7-katzenjammer.html
+++ b/main-reviews/7-katzenjammer.html
@@ -83,11 +83,11 @@
                             </section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br> bullying, gore, violence, eating disorder, gun violence, body horror, hanging</p>
                             </details>
 							<details class="trigger warning">
-								<summary>Trigger Warning (Major Spoiler/Plot Twist)</summary>
+								<summary class="trigger warning">Trigger Warning (Major Spoiler/Plot Twist)</summary>
 								<p>mass/school shooting</p>
 							</details>
 						</div>
