--- a/main-reviews/8-neverwoods.html
+++ b/main-reviews/8-neverwoods.html
@@ -68,7 +68,7 @@
 							</section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>child death, grief, kidnapping, gun violence, alcoholism, blood</p>
                             </details>
 						</div>
