--- a/main-reviews/9-girl.html
+++ b/main-reviews/9-girl.html
@@ -90,7 +90,7 @@
                             </section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br> death, child death, blood, violence, grief, injury, war</p>
                             </details>
 						</div>
