--- a/archive-reviews/red.html
+++ b/archive-reviews/red.html
@@ -64,7 +64,7 @@
                             </section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>death, violence, gun violence, murder, injury</p>
                             </details>
 						</div>
