--- a/main-reviews/11-hide.html
+++ b/main-reviews/11-hide.html
@@ -87,7 +87,7 @@
                             </section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>death, murder, violence, child death, suicide, homophobia, racism</p>
                             </details>
 						</div>
