--- a/main-reviews/3-cerulean.html
+++ b/main-reviews/3-cerulean.html
@@ -83,7 +83,7 @@
 							</section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>child abuse, xenophobia, fatphobia, confinement, body shaming</p>
                             </details>
 						</div>
