--- a/main-reviews/5-whispering.html
+++ b/main-reviews/5-whispering.html
@@ -64,7 +64,7 @@
 							</section>
 
 							<details class="trigger warning">
-                                <summary>Trigger Warnings</summary>
+                                <summary class="trigger warning">Trigger Warnings</summary>
                                 <p>Mentions or depictions of:<br>death, grief, suicide, child death, murder, animal death</p>
                             </details>
 						</div>
