--- a/main-reviews/9-girl.html
+++ b/main-reviews/9-girl.html
@@ -66,12 +66,7 @@
 
                             	<p class="girl">Very curious about how the red string of fate ties into everything going forward.</p>
 
-                            	<p class="girl">Also I’m surprisingly not as bothered by the first person narration as I expected. Could be the audiobook though.</p>
-                            </section>
-
-                            <section class="update">
-                            	<h2 class="girl">Update: 80%</h2>
-                            	<p class="girl">I have no idea where they’re going with this now.</p>
+                            	<p class="girl">Also I’m surprisingly not as bothered by the first person narration as I expected, could be the audiobook though.</p>
                             </section>
 
                             <section class="review">
