--- a/archive-reviews/red.html
+++ b/archive-reviews/red.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>All Systems Red by Martha Wells</h1>
-							<span class="image main"><img src="../images/red.jpg" alt="" /></span>
+							<div class="image main"><img src="../images/red.jpg" alt="" /></div>
 							
                             <section class="basics">
 							    <p> June 8, 2023 </p>
