--- a/main-reviews/11-hide.html
+++ b/main-reviews/11-hide.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Hide by Kiersten White</h1>
-							<span class="image main"><img src="../images/hide.jpg" alt="" /></span>
+							<div class="image main"><img src="../images/hide.jpg" alt="" /></div>
 							
                             <section class="basics">
 								<p> September 11, 2023 - September 14, 2023 </p>
