--- a/main-reviews/2-cemetery.html
+++ b/main-reviews/2-cemetery.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Cemetery Boys by Aidan Thomas</h1>
-							<span class="image main"><img src="../images/cemetery-tarot.jpg" alt="" /></span>
+							<div class="image main"><img src="../images/cemetery.jpg" alt="" /></div>
 							
 							<section class="basics">
 								<p>May 31, 2023 - June 5, 2023</p>
