--- a/main-reviews/4-rwrb.html
+++ b/main-reviews/4-rwrb.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Red, White & Royal Blue by Casey McQuiston</h1>
-							<span class="image main"><img src="../images/rwrb.jpg" alt="" /></span>
+							<div class="image main"><img src="../images/rwrb.jpg" alt="" /></div>
 							
 							<section class="basics">
 								<p>June 9, 2023 - June 23, 2023</p>
