--- a/main-reviews/9-girl.html
+++ b/main-reviews/9-girl.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Girl Who Fell Beneath the Sea by Axie Oh</h1>
-							<span class="image main"><img src="../images/girl.jpg" alt="" /></span>
+							<div class="image main"><img src="../images/girl.jpg" alt="" /></div>
 							
                             <section class="basics">
 								<p> August 14, 2023 - August 25, 2023 </p>
