--- a/archive-reviews/legendary.html
+++ b/archive-reviews/legendary.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Legendary by Stephanie Garber</h1>
-							<span class="image main"><img src="../images/legendary.jpg" alt="" /></span>
+							<div class="image main"><img src="../images/legendary.jpg" alt="" /></div>
 							
                             <section class="basics">
 							    <p>June 13, 2023 - June 21, 2023 </p>
