--- a/archive-reviews/sacrifice.html
+++ b/archive-reviews/sacrifice.html
@@ -4,6 +4,9 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
+<!--I decided not to use this page for the assignment. I finished this book while working on the project and haven't written the review yet. I decided to work thorugh my backlog of reviews I needed and I already have enough pages for the assignment. I didn't delete the whole thing because I might end up using the website.-->
+
 <html>
 	<head>
 		<title>The Sacrifice Review</title>
@@ -48,7 +51,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Sacrifice by Rin Chupeco</h1>
-							<span class="image main"><img src="../images/sacrifice.jpg" alt="" /></span>
+							<div class="image main"><img src="../images/sacrifice.jpg" alt="" /></div>
 							
                             <section class="basics">
 							    <p> September 21, 2023 - September 25, 2023 </p>
