--- a/main-reviews/10-rot.html
+++ b/main-reviews/10-rot.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Together We Rot by Skyla Arndt</h1>
-							<span class="image main"><img src="../images/rot.jpg" alt="" /></span>
+							<div class="image main"><img src="../images/rot.jpg" alt="" /></div>
 							
                             <section class="basics">
 								<p> September 5, 2023 - September 10, 2023 </p>
