--- a/main-reviews/3-cerulean.html
+++ b/main-reviews/3-cerulean.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The House in the Cerulean Sea by TJ Klune</h1>
-							<div class="image main"><img src="../images/cerulean-medium.jpg" alt="" /></div>
+							<div class="image main"><img src="../images/cerulean.jpg" alt="" /></div>
 							
 							<section class="basics">
 								<p>June 5, 2023 - June 8, 2023</p>
