--- a/main-reviews/5-whispering.html
+++ b/main-reviews/5-whispering.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Under the Whispering Door by TJ Klune</h1>
-							<span class="image main"><img src="../images/whispering.jpg" alt="" /></span>
+							<div class="image main"><img src="../images/whispering.jpg" alt="" /></div>
 							
 							<section class="basics">
 								<p>June 24, 2023 - June 28, 2023</p>
