--- a/main-reviews/6-sunbearer.html
+++ b/main-reviews/6-sunbearer.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Sunbearer Trials by Aiden Thomas</h1>
-							<span class="image main"><img src="../images/sunbearer-cards.jpg" alt="" /></span>
+							<div class="image main"><img src="../images/sunbearer.jpg" alt="" /></div>
 							
 							<section class="basics">
 								<p>June 30, 2023 - July 18, 2023</p>
