--- a/main-reviews/8-neverwoods.html
+++ b/main-reviews/8-neverwoods.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Lost in the Never Woods by Aidan Thomas</h1>
-							<span class="image main"><img src="../images/neverwoods.jpg" alt="" /></span>
+							<div class="image main"><img src="../images/neverwoods.jpg" alt="" /></div>
 							
 							<section class="basics">
 								<p> July 21, 2023 - August 11, 2023 </p>
