Footer links & fixed inheritance photo link
Edited footer
-title for contact form
-connected to email
-social media icons links to my booktok, github site, and email

Also, edited link to inheritance image (it never got updated after I shortened the image title to just inheritance.jpg rather than inheritance-medium.jpg)

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 						<div class="inner">
 							<section>
 								<h2>Let's talk about books</h2>
-								<form method="post" action="#">
+								<form method="post" action="mailto:sprusa01@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -223,9 +223,9 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://www.instagram.com/sarah_shelf/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/Sprusa1" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="mailto:sprusa01@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
